AP-287 - Fixed issue with Roles dropdown, added overflow ellipsis to combobox options.

--- a/src/Modules/Manage/Dnn.PersonaBar.Roles/Roles.Web/src/components/roles/UsersInRole/style.less
+++ b/src/Modules/Manage/Dnn.PersonaBar.Roles/Roles.Web/src/components/roles/UsersInRole/style.less
@@ -158,6 +158,9 @@
                                         color: @rollingStone;
                                         border: none;
                                         outline: none;
+                                        overflow: hidden;
+                                        text-overflow: ellipsis;
+                                        white-space: nowrap;
                                     }
                                     li:hover {
                                         background-color: @gallery;
